feat(report): Removed user management
Renamed "organisation" to "institution". Tasks doesn't have owner, instead they have "institution".
