# src/report/app.ts
@@ -4,16 +4,14 @@ import logger from './lib/logger';
 import formatMiddleware from './middlewares/format';
 import loggerMiddleware from './middlewares/logger';
 import openapi from './openapi.json';
-import orgsRouter from './routes/orgs';
-import usersRouter from './routes/users';
+import orgsRouter from './routes/institutions';
 
 const app = express();
 const port = 8080;
 
 app.use(express.json(), loggerMiddleware, formatMiddleware);
 
-app.use('/users', usersRouter);
-app.use('/orgs', orgsRouter);
+app.use('/institutions', orgsRouter);
 
 app.use('/doc/openapi.json', (_req, res) => res.json(openapi));
 app.use('/doc', swaggerUi.serve, swaggerUi.setup(openapi));
